--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -27,5 +27,15 @@
       "mode": "production"
     }
   },
-  "entities": {}
+  "entities": {
+   "Department": {
+      "source": "humanresources.department",
+      "permissions": [
+        {
+          "actions": ["*"],
+          "role": "anonymous"
+        }
+      ]
+    }
+  }
 }
