--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -24,7 +24,7 @@
       "authentication": {
         "provider": "StaticWebApps"
       },
-      "mode": "production"
+      "mode": "development"
     }
   },
   "entities": {
